<resources>
    <string name="app_name">Civil affairs</string>
    <string name="select_type_login">Select type Login</string>
    <string name="enter_you_id">Enter you ID</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="forget_password">Forget Password ?</string>
    <string name="user_s_guide">User\'s Guide</string>
    <string name="create_account">Create Account</string>
    <string name="add_a_personal_photo">Add a personal photo</string>
    <string name="first">First</string>
    <string name="middle">Middle</string>
    <string name="last">Last</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="yyyy_mm_dd">YYYY/MM/DD</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="enter_your_nationality_number">Enter your Nationality number</string>
    <string name="place_of_registration">Place of registration</string>
    <string name="enter_your_email">Enter your Email</string>
    <string name="enter_your_phone_number">Enter your Phone number</string>
    <string name="confirm_password">Confirm password</string>
    <string name="social_status">Social status</string>
    <string name="all_information_you_entered_is_correct_and_i_accept_responsibility_for_any_error_in_the_information_entered">All information you entered is correct and I accept responsibility for any error in the information entered .</string>
    <string name="enter_your_first_name">Enter your First name</string>
    <string name="enter_your_middle_name">Enter your middle name</string>
    <string name="enter_your_last_name">Enter your last name</string>
    <string name="enter_your_date_of_birth">Enter your date of birth</string>
    <string name="enter_your_confirm_password">Enter your confirm password</string>
    <string name="select_your_gender">Select your Gender</string>
    <string name="check_your_all_info_is_correct">check your all info is correct</string>
    <string name="password_not_match">Password not match !</string>
    <string name="the_phone_number_must_be_digits">The phone number must be 10 digits</string>
    <string name="password_digits">The password must be at least 8 digits</string>
    <string name="upload_failde_please_check_your_connection">Upload failed. Please check your connection</string>
    <string name="successful_upload_data">Successful upload data</string>
    <string name="select_image_first">Select Image First</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="you_havent_picked_image">You haven\'t picked Image</string>
    <string name="the_user_already_exists">The user already exists!</string>
    <string name="upload_data">Upload data ..</string>
    <string name="citizen">Citizen</string>
    <string name="employee">Employee</string>
    <string name="single">Single</string>
    <string name="married">Married</string>
    <string name="widower">Widower</string>
    <string name="enter_the_email_correctly">Enter the email correctly</string>
    <string name="create_an_account_first">Create an account first</string>
    <string name="check_your_internet">Check your Internet</string>
    <string name="loading">Loading …</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="status_login">0</string>
    <string name="department_services">Department services.</string>
    <string name="opening_times_and_the_location_of_the_department">Opening times and the location of the department.</string>
    <string name="setting">Settings</string>
    <string name="account_settings">Account settings .</string>
    <string name="logout">Logout</string>
    <string name="national_id">99</string>
    <string name="opening_times">Opening times</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="edit_profile_image">Edit Profile Image</string>
    <string name="services">Services</string>
    <string name="services_provided">Services provided</string>
    <string name="follow_up">Follow up</string>
    <string name="family_notebook_services">Family notebook services</string>
    <string name="click_here_to_see_all_services_related_to_the_passport">Click here to see all services related to the passport</string>
    <string name="click_here_to_see_all_services_related_to_civil_status_id">Click here to see all services related to Civil Status ID</string>
    <string name="passport_services">Passport Services</string>
    <string name="civil_status_card_services">Civil Status Card Services</string>
    <string name="click_here_to_see_all_services_related_to_the_family_book">Click here to see all services related to the family book</string>
    <string name="please_enter_paterfamilias_name">Please enter paterfamilias name</string>
    <string name="please_enter_your_address">Please enter your address</string>
    <string name="please_enter_your_book_number">Please enter your book number</string>
    <string name="select_place_issue">Select place issue</string>
    <string name="enter_the_national_number_of_paterfamilias">Enter the national number of paterfamilias</string>
    <string name="release_date">Release date</string>
    <string name="submission_of_the_application">Submission of the application</string>
    <string name="there_ia_a_new_request">There is a new request</string>
    <string name="key_notification">AAAA5LHngkI:APA91bHwhJbPDs_xTLRwSaxckQ3Bg2ExEN5h4BMu-p8fgaGh8KL7n7UpJozBUqrsyhRzzrk1R-f9gfy0Qx_IQil7UmcuYuURwZ2c4jzeh4gp2skH54JDSh0f1I2FILcX1egyIhW_-JR2</string>
    <string name="there_is_a_new_request_from">\"There is a new request from \"</string>
    <string name="renewing_the_family_book">Renewing the family book</string>
    <string name="issuance_of_a_damaged_allowance">Issuance of a damaged allowance</string>
    <string name="issuing_a_new_family_book">Issuing a new family book</string>
    <string name="approve">Approve</string>
    <string name="rejected">Under processing</string>
    <string name="code">Code</string>
    <string name="check_validation">Check Validation</string>
    <string name="send_message_verification">Send Message Verification</string>
    <string name="verification">Verification</string>
    <string name="check_code">Check Code</string>
    <string name="the_verification_code_entered_was_invalid">The verification code entered was invalid</string>
    <string name="there_is_no_account_for_this_national_number"> There is no account for this national number</string>
    <string name="change_password">Change Password</string>
    <string name="passport_renewal">Passport Renewal</string>
    <string name="add_enum_to_passport">Add enum to Passport</string>
    <string name="birth_certificate">Birth Certificate</string>
    <string name="click_here_to_see_all_services_related_to_the_birth_certificate">Click here to see all services related to the Birth Certificate</string>
    <string name="passport_number">Passport Number</string>
    <string name="country_of_residence">Country Of Residence</string>
    <string name="address">Address</string>
    <string name="passport_image">Passport Image</string>
    <string name="birth_certificate_image">Birth Certificate  Image</string>
    <string name="child_name">Child Name</string>
    <string name="services_passport">Services Passport</string>
    <string name="issue_birth_certificate">Issue Birth Certificate</string>
    <string name="issue_death_certificate">Issue Death Certificate</string>
    <string name="issuance_of_birth_certificate_occurred_ouside_jordan">issuance of birth certificate occurred ouside Jordan</string>
    <string name="select_image_card">Select Image card</string>
    <string name="select_image_family_book">Select image family book</string>
    <string name="deceased_name">Deceased Name</string>
    <string name="son">Son</string>
    <string name="parent">Parent</string>
    <string name="spouse">Spouse</string>
    <string name="brother">Brother</string>
    <string name="country">Country</string>
    <string name="foriegn_birth_certificate">Foreign Birth Certificate</string>
    <string name="full_name">Full Name</string>
    <string name="mother_name">Mother Name</string>
    <string name="family_book">Family Book</string>
    <string name="passport">Passport</string>
    <string name="certificate_services">Certificate Services</string>
    <string name="renewal_passport">Renewal Passport</string>
    <string name="add_enum_passport">Add Enum Passport</string>
    <string name="certificate_death">Certificate Death</string>
    <string name="certificate_outside">Certificate Outside</string>
    <string name="certificate_issue">Certificate issue</string>
    <string name="change_language">Arabic</string>
    <string name="english">English</string>

</resources>
