<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />

        <item
            android:id="@+id/nav_department"
            android:icon="@drawable/crown"
            android:title="@string/department_services" />

        <item
            android:id="@+id/nav_user_guide"
            android:icon="@drawable/star"
            android:title="@string/user_s_guide" />
        <item
            android:id="@+id/nav_open_times"
            android:icon="@drawable/world"
            android:title="@string/opening_times" />
        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/settings"
            android:title="@string/setting" />
    </group>
</menu>
