<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_gry"
    tools:context=".ForgotPasswordActivity">

    <TextView
        style="@style/style_font"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="64dp"
        android:text="Forgot Password"
        android:textAlignment="center"
        android:textSize="25sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/et_forgot_national"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_centerInParent="true"
        android:layout_margin="16dp"
        android:background="@drawable/edt_background"
        android:hint="@string/enter_your_nationality_number"
        android:inputType="number"
        android:maxLength="10"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/et_forgot_phone"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/et_forgot_national"
        android:layout_centerInParent="true"
        android:layout_margin="16dp"
        android:maxLength="13"
        android:background="@drawable/edt_background"
        android:hint="@string/enter_your_phone_number"
        android:inputType="phone"
        android:text="+9627"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/et_code"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_below="@+id/et_forgot_phone"
        android:layout_centerInParent="true"
        android:layout_margin="16dp"
        android:visibility="gone"
        android:background="@drawable/edt_background"
        android:hint="@string/code"
        android:inputType="number"
        android:textAlignment="center" />

    <Button
        android:id="@+id/bt_verification"
        style="@style/style_font"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_code"
        android:layout_margin="32dp"
        android:background="@drawable/edt_background"
        android:text="@string/verification"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:textStyle="bold" />
    <Button
        android:id="@+id/bt_check"
        style="@style/style_font"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_code"
        android:layout_margin="32dp"
        android:visibility="gone"
        android:background="@drawable/edt_background"
        android:text="@string/check_code"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:textStyle="bold" />


</RelativeLayout>