<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_gry"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/logo_img"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="32dp"
        android:scaleType="fitXY"
        android:src="@drawable/login_logo"
        tools:ignore="ContentDescription" />

    <TextView
        style="@style/style_font"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo_img"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:visibility="gone"
        android:text="@string/select_type_login"
        android:textSize="17sp"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/spinner_user"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_below="@id/logo_img"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:visibility="gone"
        android:background="@drawable/edt_background"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/et_ID"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@id/spinner_user"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="40dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/edt_background"
        android:drawableEnd="@drawable/ic_username"
        android:hint="@string/enter_you_id"
        android:importantForAutofill="no"
        android:inputType="number"
        android:maxLength="10"
        android:textAlignment="center"
        android:textColor="#000000" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@id/et_ID"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="40dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/edt_background"
        android:drawableEnd="@drawable/ic_password"
        android:hint="@string/enter_your_password"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textColor="#000000" />

    <Button
        android:id="@+id/bt_sign_in"
        style="@style/style_font"
        android:layout_width="100dp"
        android:layout_height="52dp"
        android:layout_below="@id/et_password"
        android:layout_alignStart="@id/et_password"
        android:layout_marginStart="8dp"
        android:layout_marginTop="64dp"
        android:background="@drawable/edt_background"
        android:text="@string/sign_in"
        android:textAllCaps="false"
        android:textStyle="bold" />

    <Button
        android:id="@+id/bt_sign_up"
        style="@style/style_font"
        android:layout_width="100dp"
        android:layout_height="52dp"
        android:layout_below="@id/et_password"
        android:layout_alignEnd="@id/et_password"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/edt_background"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tx_forgot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/bt_sign_in"
        android:layout_alignStart="@+id/bt_sign_in"
        android:layout_marginTop="32dp"
        android:text="@string/forget_password"
        style="@style/style_font"
        android:textSize="20sp"
        android:textStyle="bold" />

    <View
        android:layout_width="165dp"
        android:layout_height="2dp"
        android:layout_below="@+id/tx_forgot"
        android:layout_alignStart="@id/et_password"
        android:layout_marginStart="8dp"
        android:layout_marginTop="-2dp"
        android:background="#ffffff" />

    <TextView
        android:id="@+id/tx_guide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/bt_sign_up"
        android:layout_alignStart="@+id/bt_sign_up"
        android:layout_marginTop="32dp"
        android:text="@string/user_s_guide"
        style="@style/style_font"
        android:textSize="20sp"
        android:textStyle="bold" />

    <View
        android:layout_width="112dp"
        android:layout_height="2dp"
        android:layout_below="@+id/tx_forgot"
        android:layout_alignStart="@id/tx_guide"
        android:layout_marginTop="-2dp"
        android:background="#ffffff" />

</RelativeLayout>