<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.DepartmentServices.PassportServices.AddEnum.AddEnumFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <ImageView
        android:id="@+id/img_addenum_passport"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:src="@drawable/ic_add"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/txt"
        style="@style/style_font"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/img_addenum_passport"
        android:layout_centerHorizontal="true"
        android:text="@string/passport_image"
        android:textSize="17sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/et_passport_number"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/txt"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:inputType="number"
        android:background="@drawable/edt_background"
        android:hint="@string/passport_number"
        android:textAlignment="center" />

    <ImageView
        android:id="@+id/img_birth_certificate_passport"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/et_passport_number"
        android:layout_gravity="center"
        android:layout_marginTop="32dp"
        android:src="@drawable/ic_add"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/txt2"
        style="@style/style_font"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/img_birth_certificate_passport"
        android:layout_centerHorizontal="true"
        android:text="@string/birth_certificate_image"
        android:textSize="17sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/et_child_name"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/txt2"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/edt_background"
        android:hint="@string/child_name"
        android:textAlignment="center" />

    <Button
        android:id="@+id/bt_submission"
        style="@style/style_font"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_child_name"
        android:layout_margin="64dp"
        android:background="@drawable/edt_background"
        android:foreground="?android:attr/selectableItemBackground"
        android:text="@string/submission_of_the_application"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#212121"
        android:textSize="17sp"
        android:textStyle="bold"
        tools:ignore="UnusedAttribute" />
    </RelativeLayout>

</ScrollView>